--- a/style.css
+++ b/style.css
@@ -162,3 +162,96 @@ img {
     margin: auto 0;
     padding: 20px 30px 20px 20px;
 } */
+
+
+/* hover effect on siblings */
+.container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.item {
+    padding: 100px;
+    background-color: aqua;
+    border-radius: 10px;
+    text-align: center;
+    flex-wrap: 1 1 100px;
+    transition: .3s;
+}
+.container:hover > :not(:hover) {
+    opacity: 0.4;
+}
+/* hover effect on siblings */
+
+/* input */
+.ctn-ip {
+    padding: 50px;
+}
+.input-group {
+    position: relative;
+}
+input {
+    border: solid 1.5px #9e9e9e;
+    border-radius: 1rem;
+    background: none;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #f5f5f5;
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+label {
+    position: absolute;
+    left: 16px;
+    color: #e8e8e8;
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+input:focus {
+    outline: none;
+    border: 1.5px solid #1a73e8;
+}
+input:focus ~ label {
+    transform: translateY(-50%) scale(0.8);
+    /* background-color: #020e26; */
+    background-color: white;
+    padding: 0 0.2rem;
+    color: #2196f3;
+}
+/* input */
+
+/* button */
+
+.button {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #090909;
+    outline: 2px solid #7effb2;
+    padding: 20px 40px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: color 1s;
+}
+.button:hover {
+    color: #090909;
+    cursor: pointer;
+}
+.button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -50px;
+    z-index: -1;
+    width: 150%;
+    height: 100%;
+    background-color: orange;
+    transform: scaleX(0) skewX(35deg);
+    transform-origin: left;
+    transition: transform 1s;
+}
+.button:hover::before {
+    transform: scaleX(1) skewX(35deg);
+}
+/* button */
