--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 /* grid */
 
-img {
+.iteam-box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -235,7 +235,7 @@ input:focus ~ label {
     transition: color 1s;
 }
 .button:hover {
-    color: #090909;
+    color: #2f2ce3;
     cursor: pointer;
 }
 .button::before {
@@ -255,3 +255,50 @@ input:focus ~ label {
     transform: scaleX(1) skewX(35deg);
 }
 /* button */
+
+/* navbar */
+/* .navbar {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    padding: 15px;
+}
+.navbar a {
+    text-decoration: none;
+    color: inherit;
+}
+.logo {
+    margin-top: 50px;
+}
+.list {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+}
+#toggler,
+.navbar label {
+    display: none;
+}
+@media screen and (max-width:600px) {
+    .menu {
+        width: 100%;
+        max-height: 0;
+        overflow: hidden;
+    }
+    .list {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+    .navbar label {
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    #toggler:checked ~ .menu {
+        max-height: 100%;
+    }
+} */
+/* navbar */
